crates/rlm-derive/tests/ui/generics_not_supported.stderr
error: rlm_type currently supports named structs only (no generics or lifetimes)
 --> tests/ui/generics_not_supported.rs:4:8
  |
4 | struct Generic<T> {
  |        ^^^^^^^
