crates/rlm-derive/tests/ui/generics_not_supported.rs
use rlm_derive::rlm_type;

#[rlm_type]
struct Generic<T> {
    value: T,
}

fn main() {}
